# Coding_Challenges

./: order.docx  ~$order.docx
7-days-Bash-Challenge/Challenges/Day_1/: day1.sh
7-days-Bash-Scripting-Challenge/_Submissions/Day_2/backup_2025-10-15_17-05-18/: explorer.sh
7-days-Bash-Scripting-Challenge/_Submissions/Day_3/: user_management.sh
7-days-Bash-Scripting-Challenge/_Submissions/Day_4/: monitor_process.sh  monitoring_script.sh
7-days-Bash-Scripting-Challenge/_Submissions/Day_5/: sample_log.sh
AlgoExpert/src/: BranchSums.java  ClosestInBST.java  FirstNonREpeating.java  GenerateDoc.java  NonConstructibleChange.java  Palindrome.java  RandomNumber.java  Sum.java  ValidateSubsequence.java
CodeForces/c++/: BearAndBigBrother.cpp  BoyOrGirl.cpp  CMakeLists.txt  Elephant.cpp  Soldiers_Bananas.cpp  StonesOnTable.cpp  WrongSubstraction.cpp
CodeForces/c++/1000 problems/: CMakeLists.txt
CodeForces/c++/1000 problems/binary_search/: KDivisibleSum.cpp  ThinkIT.cpp  TrafficLight.cpp
CodeForces/c++/1000 problems/constructive_algorithms/: AssemblyViaRemainders.cpp  FavouritePermutation.cpp  OlyaAndGamesWithArrays.cpp  ShiftsAndSorting.cpp
CodeForces/c++/1000 problems/data_structures/: PogressiveSquare.cpp
CodeForces/c++/1000 problems/implementation/: CapsLock.cpp  StringTask.cpp  YoungPhysicist.cpp
CodeForces/c++/1000 problems/math/: TheatreSquare.cpp
CodeForces/c++/1000 problems/sorting/: Dragons.cpp  MahmoudAndTriangle.cpp
CodeForces/c++/1100 problems/: CMakeLists.txt
CodeForces/c++/1100 problems/greedy/: EducationalGame.cpp  IncreaseDecreaseCopy.cpp
CodeForces/c++/1200 problems/: CMakeLists.txt
CodeForces/c++/1200 problems/binary_search/: Worms.cpp
CodeForces/c++/1300 problems/: BuyingShovels.cpp  CMakeLists.txt  CutTheRibbon.cpp  IQTest.cpp  ProductOfThreeNumbers.cpp  RandomTeams.cpp
CodeForces/c++/1700 problems/: CMakeLists.txt
CodeForces/c++/1700 problems/binary_search/: NumberOfWays.cpp
CodeForces/c++/800 problems/: Anton_Danik.cpp  BearAndBigBrother.cpp  BeautifulMatrix.cpp  BeautifulYear.cpp  BoyOrGirl.cpp  CMakeLists.txt  Elephant.cpp  George_Accomodation.cpp  HelpfulMaths.cpp  InSearchEasyProblem.cpp  NearlyLuckyNumber.cpp  Petya_Strings.cpp  QueueAtSchool.cpp  Soldiers_Bananas.cpp  StonesOnTable.cpp  Tram.cpp  Translation.cpp  VanyaAndFence.cpp  Word.cpp  WordCapitalization.cpp  WrongSubstraction.cpp
CodeForces/c++/800 problems/binary_search/: CanISquare.cpp  GamerHemose.cpp  Legs.cpp  MedianMaximization.cpp  NeneGame.cpp  NewBakery.cpp  NewYearAndHurry.cpp  TeamComposition.cpp
CodeForces/c++/800 problems/brute_force/: MaximumMultipleSum.cpp
CodeForces/c++/800 problems/data_structures/: ICPCBalloons.cpp
CodeForces/c++/800 problems/implementation/: CalculatingFunction.cpp  Magnets.cpp
CodeForces/c++/800 problems/math/: ProblemGenerator.cpp
CodeForces/c++/800 problems/sorting/: ChoosingCubes.cpp
CodeForces/c++/900 problems/: CMakeLists.txt
CodeForces/c++/900 problems/binary_search/: SushiForTwo.cpp
CodeForces/c++/900 problems/data_structures/: OddQueries.cpp
CodeForces/c++/900 problems/sorting/: ArrayReordering.cpp  BalancedRound.cpp  BusinessTrip.cpp  EvenOdds.cpp  Football.cpp  GameWithSticks.cpp  GravityFlip.cpp  HQ9+.cpp  KefaAndFirstSteps.cpp  Keyboard.cpp  LlyaAndBankAccount.cpp  OathOfTheNightWatch.cpp  Promo.cpp  Sale.cpp  Twins.cpp  VasyaAndSocks.cpp
CodeForces/c++/Contests/Round 967/: CMakeLists.txt  MakeAllEqual.cpp
CodeForces/c++/Contests/Round 968/: CMakeLists.txt  TurtleAndGoodStrings.cpp  TurtleAndPiggyArePlayingAGame.cpp  TurtleAndThreeSequences.cpp
CodeForces/c++/Contests/Round 970 (Div 3)/: CMakeLists.txt  LongestGoodArray.cpp  SakurakoExam.cpp  SquareOrNot.cpp
CodeForces/c++/Contests/Round 971 (Div 4)/: CMakeLists.txt  LegendOfFreyaTheFrog.cpp  Minimize.cpp  OsuMania.cpp
CodeForces/src/problems_1300/: CutRibbon.java  RegistrationSystem.java
CodeForces/src/problems_800/: BeautifulMatrix.java
CodingGame/src/: Tempratures.java  TheDescent.java
LeetCode/C++/: CMakeLists.txt  FirstMissingPositive.cpp  IsPalindrome.cpp  ListNode.h  LongestCommonPrefix.cpp  MergeTwoSortedList.cpp  RemoveDuplicates.cpp  RomanToInterger.cpp  SingleNumber.cpp  TwoSum.cpp  ValidPalindrome.cpp  ValidParentheses.cpp
LeetCode/Java/src/: AddBinary.java  BinaryTreeInorderTraversal.java  ClimbingStairs.java  Counter.java  Duplicates.js  FirstOccurrence.java  InorderTraversal.java  InsertPosition.java  LengthOfLastWord.java  LongestPrefix.java  MergeSortedArray.java  MergeTwoSortedList.java  PalindromNumber.java  PlusOne.java  RemoveDuplicates.java  RemoveDuplicatesfromSortedList.java  RemoveElement.java  RomanToInt.java  SameTree.java  Socks.java  Sqrt.java  SymetricTree.java  TwoSums.java  ValidParentheses.java
LeetCode/src/: AddBinary.java  BinaryTreeInorderTraversal.java  ClimbingStairs.java  Counter.java  FirstOccurrence.java  LengthOfLastWord.java  LongestPrefix.java  MergeTwoSortedList.java  PalindromNumber.java  RemoveDuplicates.java  RomanToInt.java  Sqrt.java  ValidParentheses.java
LeetCode/src/removeduplicates/: RemoveDuplicatesfromSortedList.java
OlympIQs/src/: EndPoint.java  PrisonBreak.java
SesameCodingChallenge/src/: Ex1.java  Ex10.java  Ex2.java  Ex3.java  Ex4.java  Ex5.java  Ex6.java  Ex7.java  Ex8.java  Ex9.java
Using Python/: TwoSums.py
(+16 files in other folders)
