cmake_minimum_required(VERSION 3.28)
project(c__)
project(c__2)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__
        #BeautifulMatrix.cpp
        #Petya_Strings.cpp
        #HelpfulMaths.cpp
        #WordCapitalization.cpp
        #BoyOrGirl.cpp
        #BearAndBigBrother.cpp
        #StonesOnTable.cpp
        #Elephant.cpp
        #Soldiers_Bananas.cpp
        #Word.cpp
        #WrongSubstraction.cpp
        NearlyLuckyNumber.cpp
)
