cmake_minimum_required(VERSION 3.26)
project(C___problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___problems TwoSum.cpp
        IsPalindrome.cpp
        RomanToInterger.cpp
        LongestCommonPrefix.cpp
        ValidParentheses.cpp
        MergeTwoSortedList.cpp
        ListNode.h
        FirstMissingPositive.cpp
        ValidPalindrome.cpp
        SingleNumber.cpp
        RemoveDuplicates.cpp)
