cmake_minimum_required(VERSION 3.28)
project(c__)
project(c__2)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__
        #BeautifulMatrix.cpp
        #Petya_Strings.cpp
        #HelpfulMaths.cpp
        #WordCapitalization.cpp
        #BoyOrGirl.cpp
        #BearAndBigBrother.cpp
        #StonesOnTable.cpp
        #Elephant.cpp
        #Soldiers_Bananas.cpp
        #Word.cpp
        #WrongSubstraction.cpp
        #NearlyLuckyNumber.cpp
        #Anton_Danik.cpp
        #Translation.cpp
        #Tram.cpp
        #VanyaAndFence.cpp
        #BeautifulYear.cpp
        #QueueAtSchool.cpp
        #InSearchEasyProblem.cpp
        George_Accomodation.cpp
)
add_executable(brute_force
        brute_force/MaximumMultipleSum.cpp
)
add_executable(sorting
        sorting/ChoosingCubes.cpp
)
add_executable(math math/ProblemGenerator.cpp)
