cmake_minimum_required(VERSION 3.28)
project(900_problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(sorting
        #sorting/Football.cpp
        #sorting/Twins.cpp
        #sorting/EvenOdds.cpp
        #sorting/HQ9+.cpp
        #sorting/GravityFlip.cpp
        #sorting/KefaAndFirstSteps.cpp
        #sorting/Sale.cpp
        #sorting/BusinessTrip.cpp
        #sorting/BalancedRound.cpp
        #sorting/OathOfTheNightWatch.cpp
        #sorting/GameWithSticks.cpp
        #sorting/LlyaAndBankAccount.cpp
        #sorting/VasyaAndSocks.cpp
        sorting/Keyboard.cpp
)
